--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["Web Extractor", "HTML Extractor", "Data Extractor", "Yahoo Image", "Web Scraping"],
     "license": "MIT",
     "minimum-stability": "stable",
-    "homepage": "https://panduan.vip",
+    "homepage": "https://panduan.dev/yahoo-image",
 
     "authors": [
         {
